--- a/src/client/app/sass/main.scss
+++ b/src/client/app/sass/main.scss
@@ -1,3 +1,9 @@
 input {
     margin-left: 10px !important;
 }
+
+.btn-search{
+
+    background-image: url('../assets/img/search.png');
+    background-repeat: no-repeat;
+}
