--- a/src/client/app/sass/main.scss
+++ b/src/client/app/sass/main.scss
@@ -1,9 +1,13 @@
-input {
-    margin-left: 10px !important;
+//1 Variables para fuentes e inconos de font-awesome
+$fa-font-path: "../../../../node_modules/font-awesome/fonts";
+//2 Import para fuentes e iconos de font-awesome
+@import "../../../../node_modules/font-awesome/scss/font-awesome.scss";
+
+html {
+    // font-family: FontAwesome;
+    src: url($fa-font-path +'/fontawesome-webfont.woff') format("opentype");
 }
 
-.btn-search{
-
-    background-image: url('../assets/img/search.png');
-    background-repeat: no-repeat;
+input {
+    margin-left: 10px !important;
 }
