--- a/src/client/app/sass/main.scss
+++ b/src/client/app/sass/main.scss
@@ -1,13 +1,14 @@
 //1 Variables para fuentes e inconos de font-awesome
-$fa-font-path: "../../../../node_modules/font-awesome/fonts";
+$fa-font-path: '../../../../node_modules/font-awesome/fonts';
 //2 Import para fuentes e iconos de font-awesome
-@import "../../../../node_modules/font-awesome/scss/font-awesome.scss";
+@import '../../../../node_modules/font-awesome/scss/font-awesome.scss';
 
-html {
-    // font-family: FontAwesome;
-    src: url($fa-font-path +'/fontawesome-webfont.woff') format("opentype");
+html { 
+  src: url($fa-font-path + '/fontawesome-webfont.woff') format('opentype');
 }
-
+.margin-right-xs{
+  margin-right: 1rem;
+}
 input {
-    margin-left: 10px !important;
+  margin-left: 10px !important;
 }
