--- a/src/client/app/vehicle.component/vehicle.scss
+++ b/src/client/app/vehicle.component/vehicle.scss
@@ -1,3 +1,3 @@
 .icon-gas-station {
-  background-image: url(../assets/img/gas-station.svg);
+  background-image: url('../assets/img/gas-station.svg');
 }
