--- a/src/client/app/sass/main.scss
+++ b/src/client/app/sass/main.scss
@@ -3,12 +3,21 @@ $fa-font-path: '../../../../node_modules/font-awesome/fonts';
 //2 Import para fuentes e iconos de font-awesome
 @import '../../../../node_modules/font-awesome/scss/font-awesome.scss';
 
-html { 
-  src: url($fa-font-path + '/fontawesome-webfont.woff') format('opentype');
+html {
+    src: url($fa-font-path + '/fontawesome-webfont.woff') format('opentype');
 }
-.margin-right-xs{
-  margin-right: 1rem;
+
+.margin-right-xs {
+    margin-right: 1rem;
 }
-input {
-  margin-left: 10px !important;
+
+.w-50 {
+    width: 50% !important;
 }
+
+// .dropdown-menu.dropdown-menu-right.show {
+//     left: 25px !important;
+// }
+// .dropdown-menu.dropdown-menu-right.show {
+//   left: 3px !important;
+// }
